[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_image_api"
version = "0.2.0"
description = "An API to generate images using Stable Diffusion and ComfyUI"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.8"
authors = [
    { name="Jason L Weirather", email="jason.weirather@gmail.com" }
]
dependencies = [
    "Flask",
    "PyYAML",
    "numpy",
    "click",
    "jsonschema",
    "tomli",
    "nudenet",
    "websocket-client"
]

[project.urls]
"Homepage" = "https://github.com/jason-weirather/comfyui-image-api"

[project.scripts]
comfy-api = "comfyui_image_api.api_server:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["comfyui_image_api"]
include-package-data = true
