[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui_api"
version = "0.3.5"
description = "A FastAPI wrapper for ComfyUI workflows"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "httpx>=0.28,<1",
    "jsonschema>=4.26,<5",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.8,<3",
    "python-multipart>=0.0.20,<1",
    "PyYAML>=6,<7",
    "Pillow>=10,<12",
    "nudenet"
]

[project.urls]
Homepage = "https://github.com/jason-weirather/comfyui-api"

[project.scripts]
comfyui-api = "comfyui_api.main:main"
comfy-api = "comfyui_api.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["comfyui_api"]
include-package-data = true

[tool.setuptools.package-data]
comfyui_api = [
    "Cassettes/*/*.yaml",
    "Cassettes/*/*.json",
    "Schemas/*.json",
    "Templates/*.yaml",
]
